# ChangeLog for app-vim/nerdcommenter
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/nerdcommenter/ChangeLog,v 1.4 2008/01/25 23:03:49 philantrop Exp $

  25 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
  nerdcommenter-2.1.6.ebuild:
  Keyworded ~amd64 as per bug 201804.

*nerdcommenter-2.1.6 (29 Nov 2007)

  29 Nov 2007; Ali Polatel <hawking@gentoo.org> +nerdcommenter-2.1.6.ebuild:
  Version bump

  07 Sep 2007; Ali Polatel <hawking@gentoo.org> nerdcommenter-2.1.3.ebuild:
  corrected license s/as-is/public-domain/

*nerdcommenter-2.1.3 (07 Sep 2007)

  07 Sep 2007; Ali Polatel <hawking@gentoo.org> +metadata.xml,
  +nerdcommenter-2.1.3.ebuild:
  initial commit
