@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST nerdcommenter-2.1.11.tar.bz2 31262 RMD160 d9348662fdacb7d8360e889b205b0754ff6141fb SHA1 202f540fab1a3a5183b5ddf970a8e926d32510a2 SHA256 3e260bec4d93fb5ba12f0542712940b35b9a01ddc32095c0c9f0fb6db7b47084
 DIST nerdcommenter-2.1.3.tar.bz2 32419 RMD160 6163842769fac211cf1e4a4adcc4fa30baed4f45 SHA1 5c420906b958fc5a6e03e33ce406f435491a5feb SHA256 cfde40a763604460394ca39d299cb2ffa1920eb24ab1e9c0038a593c9cd57e9e
 DIST nerdcommenter-2.1.6.tar.bz2 30522 RMD160 ea015c6c1f730f342a60a5ce27adc812389810c4 SHA1 3f5cff12eadb77be8242ebb2d1f395b3f6e929d8 SHA256 f83866d719ab283cc032084803911602aabf12794ddb7bae6357b8c3fa99cd75
+EBUILD nerdcommenter-2.1.11.ebuild 508 RMD160 ecb1e5ded5bbc5600e5c21d01845e99807122023 SHA1 e0b00146203ffaf496c1ba7332506eb7b137fb5c SHA256 e8f9cd31907cb12058b92b4b98b7bdcd92f525b48617db3a276afcd86e88c443
 EBUILD nerdcommenter-2.1.3.ebuild 473 RMD160 175a1428c174531f42746a5642693859de18378c SHA1 c24c47d59dbe52184667fcd08c09c7451d9df163 SHA256 73a590a8dd1edd29404bf14261f8f3347700e87d75b89c9f424fb4e9648c7bdd
 EBUILD nerdcommenter-2.1.6.ebuild 510 RMD160 c90037227b367d7334444751f25f65f6af947a69 SHA1 939583195ad5322c8c0bf11911910e68b6b21a70 SHA256 4414ed608fcceff8bca0d94622a60ec8cfd0ae049eb0c74085e324c763039602
-MISC ChangeLog 740 RMD160 4412c1b4bdb1039145c2c533a00699e9772acc27 SHA1 2727bd067df80ec02efc412ddf5506cb5e58369d SHA256 4f467b27a0a96bca64df8a0fb894f1879ed4487c4fed1cf90d03e28bc76754bc
+MISC ChangeLog 871 RMD160 ebf0e5d200e5f1c27daaa4e3c71e1130d7050d2f SHA1 33f1aa6edcea506c38377e370bec9b31f8f09ca8 SHA256 348a46de8eea711e82f2aeeeb31b29c4c93c86fd66d3fc9aba52d1d36d919c14
 MISC metadata.xml 158 RMD160 c473986398a10870248cf48fd2e79cacb4442e06 SHA1 9907ceb491d9c0af01a10ff553d0c2f957861948 SHA256 a50f7e086b8e90ea2505c615c8a321faf36f785ad9d1d2b67f5f04876230027b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFH42WKQU4yORhF8iARArJvAJ9ImJ9hcCD+mqsjGDw8RfmeDEM09ACeKHmr
+OLp8pjawrc3V9oUp+qtuRWw=
+=nSe4
+-----END PGP SIGNATURE-----
