@@ -1,6 +1,12 @@
 # ChangeLog for app-vim/nerdcommenter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/nerdcommenter/ChangeLog,v 1.4 2008/01/25 23:03:49 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/nerdcommenter/ChangeLog,v 1.5 2008/03/21 07:37:06 hawking Exp $
+
+*nerdcommenter-2.1.11 (21 Mar 2008)
+
+  21 Mar 2008; Ali Polatel <hawking@gentoo.org>
+  +nerdcommenter-2.1.11.ebuild:
+  Version bump.
 
   25 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
   nerdcommenter-2.1.6.ebuild:
